# looptimer

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yml  tests.yml
looptimer/: __init__.py  looptimer.py
test/: test_looptimer.py
