[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looptimer"
version = "1.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Bryan Johnson", email = "d.bryan.johnson@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["timer", "timing", "progress"]
dependencies = []
requires-python = ">=2.7"

[project.optional-dependencies]
dev = ["bumpver", "pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/dbjohnson/looptimer"

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"looptimer/__init__.py" = ["{version}"]
